# SeniorCapstone

./: .#mapGUI.py  README.md  cinema_story.py  dict_map.py  location.py  map.py  map.py~  mapGUI.py  mapGUI.py~  park_story.py  scene.py  scene.py~  story_map.py  story_telling.py
devel/: .catkin  .rosinstall  setup.sh
devel/include/lili_audio/: RecognizeSpeech.h  RecognizeSpeechRequest.h  RecognizeSpeechResponse.h  TTSAction.h  TTSActionFeedback.h  TTSActionGoal.h  TTSActionResult.h  TTSFeedback.h  TTSGoal.h  TTSResult.h
devel/lib/pkgconfig/: lili_audio.pc  lili_graphics.pc
devel/lib/python2.7/dist-packages/lili_audio/msg/: _TTSAction.py  _TTSActionFeedback.py  _TTSActionGoal.py  _TTSActionResult.py  _TTSFeedback.py  _TTSGoal.py  _TTSResult.py  __init__.py
devel/lib/python2.7/dist-packages/lili_audio/srv/: _RecognizeSpeech.py  __init__.py
devel/share/common-lisp/ros/lili_audio/msg/: TTSAction.lisp  TTSActionFeedback.lisp  TTSActionGoal.lisp  TTSActionResult.lisp  (+11 more)
devel/share/lili_audio/cmake/: lili_audio-msg-extras.cmake  lili_audio-msg-paths.cmake  lili_audioConfig.cmake
devel/share/lili_audio/msg/: TTSAction.msg  TTSActionFeedback.msg  TTSActionGoal.msg  TTSActionResult.msg  TTSGoal.msg
devel/share/lili_graphics/cmake/: lili_graphicsConfig.cmake
devel/share/roseus/ros/lili_audio/: manifest.l
lili_audio/: CMakeLists.txt  readme.txt
lili_audio/action/: TTS.action
lili_audio/src/: .speech_recog.py.swo  .speech_recog.py.swp  model.out  sound_recorder.py  speech_recog.py  testSpeakerRecog.py  text_to_speech.py
lili_graphics/: CMakeLists.txt
lili_graphics/images/cinema_images/: candy_counter.jpg.desktop
lili_graphics/launch/: lili_graphics.launch
lili_storytelling/: package.xml
lili_storytelling/launch/: mapGUI.launch
lili_storytelling/src/: .story_telling.py.swp  cinema_story.py  createdStories  dialog.py  global_nodes.py  lili_avatar.py  model.out  player.py  scene.py  story.py  story_edge.py  story_telling.py  testSpeakerRecog.py  test_story.py  utility_funcs.py
src/: README.md
src/lili_audio/: model.out  package.xml
src/lili_audio/include/: audio_capture
src/lili_audio/launch/: speech_recognition.launch  text_to_speech.launch
src/lili_audio/src/: .speech_recog.py.swm  .speech_recog.py.swn  model.out  speech_recog.py  testSpeakerRecog.py  text_to_speech.py
src/lili_audio/srv/: RecognizeSpeech.srv
src/lili_bringup/: CMakeLists.txt  package.xml
src/lili_bringup/launch/: robot.launch  robot_3dsensor.launch  robot_lidar.launch
src/lili_description/: CMakeLists.txt  package.xml
src/lili_description/urdf/: lili.urdf.xacro  lili_3dsensor.urdf.xacro  lili_lidar.urdf.xacro
src/lili_description/urdf/include/: asus_xtion_pro.urdf.xacro  create.urdf.xacro
src/lili_graphics/: package.xml
src/lili_graphics/images/cinema_images/: movie_screen.jpg.desktop  restroom.jpg.desktop
src/lili_graphics/src/: lili_graphics.py
src/lili_navigation/: CMakeLists.txt  package.xml
src/lili_navigation/launch/: navigation.launch  slam.launch
src/lili_navigation/launch/include/: move_base.launch
src/lili_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
src/lili_storytelling/: CMakeLists.txt
src/lili_storytelling/launch/: story_telling.launch
src/lili_storytelling/src/: .dict_map.py.swp  .location.py.swp  .story_telling.py.swm  .story_telling.py.swn  .story_telling.py.swo  1  chooseLoc.py  createdStories  interactive_story.py  lili_avatar.py  location.py  mapGUI.py  map_setup.py  old_sound_recorder.py  old_testSpeakerRecog.py  original_story_telling.py  our_story_telling.py  park_story.py  sound_recorder.py  story_map.py  story_node.py  story_telling.py  testSpeakerRecog.py
(+22 files in other folders)
