<?xml version="1.0"?>
<package>
  <name>lili_storytelling</name>
  <version>0.0.0</version>
  <description>The lili_storytelling package</description>

  <maintainer email="adennis96@users.noreply.github.com">adennis96</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lili_audio</run_depend>
  <run_depend>lili_graphics</run_depend>
  <run_depend>sound_play</run_depend>

</package>
