<?xml version="1.0"?>
<package>
  <name>lili_audio</name>
  <version>0.0.0</version>
  <description>The lili_audio package</description>

  <maintainer email="adennis96@users.noreply.github.com">adennis96</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>audio_capture</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>audio_play</run_depend>

</package>
