<?xml version="1.0"?>
<package>
  <name>lili_bringup</name>
  <version>0.0.0</version>
  <description>The lili_bringup package</description>

  <maintainer email="adennis96@users.noreply.github.com">adennis96</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>create_node</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xv_11_laser_driver</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>lili_description</run_depend>

</package>
