<?xml version="1.0"?>
<package>
  <name>lili_description</name>
  <version>0.0.0</version>
  <description>The lili_description package</description>

  <maintainer email="adennis96@users.noreply.github.com">adennis96</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>create_description</run_depend>
  <run_depend>turtlebot_description</run_depend>

</package>
